# poetry-date-version-plugin

./: .gitignore  COPYING.md  README.md  pyproject.toml
src/poetry_date_version_plugin/: __init__.py  plugin.py
tests/: test_poetry_date_version_plugin.py
